--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,56 @@
+body {
+  background: #f7f7f7 !important;
+  height: 100vh !important;
+}
+
+.w100 {
+  width: 100%;
+}
+
 /* HEADER */
 header {
-  background: url('assets/imgs/banner.jpg') no-repeat;
-  background-size: cover;
-  color: #fff;
+  background: #f7f7f7;
   display: flex;
   height: 12rem;
-  justify-content: space-between;
-  padding: 3rem;
+  padding: 2rem;
   position: fixed;
+  transition: box-shadow 500ms;
   width: 100%;
+  z-index: 10;
+}
+
+.box-shadow {
+  box-shadow: 0 0 25px 0 rgba(0,0,0,0.75);
 }
 
 .my-profile {
   height: 100%;
+  transition: display 1s;
 }
 
-.my-data {
+#my-data {
   margin: auto 1rem;
+  overflow: hidden;
+  transition: all 500ms linear, opacity 0s;
+  width: 340px;
+}
+
+.hidden {
+  height: 100%;
+  margin: 0 !important;
+  opacity: 0;
+  visibility: hidden;
+  width: 0 !important;
 }
 
 .my-image {
   border-radius: 50%;
-  box-shadow: 0 0 25px 0 rgba(0,0,0,0.75);
   height: 100%;
 }
 
-.my-name {
-  color: white;
-}
-
-.gif-display-none {
-  height: 100%;
+.vw100 {
+  display: flex;
+  width: 100vw;
 }
 
 /* MAIN */
@@ -57,7 +77,7 @@ main {
 }
 
 .main-timeline .timeline {
-  margin-bottom: 40px;
+  padding-bottom: 40px;
   position: relative
 }
 
@@ -245,47 +265,75 @@ main {
     margin: 0;
     left: 7px
   }
+
   .main-timeline .timeline {
     margin-bottom: 20px
   }
+
   .main-timeline .timeline:last-child {
     margin-bottom: 0
   }
+
   .main-timeline .icon {
     margin: auto 0
   }
+
   .main-timeline .date-content {
     width: 95%;
     float: right;
     margin-top: 0
   }
+
   .main-timeline .date-content:before {
     display: none
   }
+
   .main-timeline .date-outer {
     width: 110px;
     height: 110px
   }
+
   .main-timeline .date-outer:before,
   .main-timeline .date-outer:after {
     width: 110px;
     height: 110px
   }
+
   .main-timeline .date {
     top: 30%
   }
+
   .main-timeline .year {
     font-size: 24px
   }
+
   .main-timeline .timeline-content,
   .main-timeline .timeline:nth-child(2n) .timeline-content {
     width: 95%;
     text-align: center;
     padding: 10px 0
   }
+
   .main-timeline .title {
     margin-bottom: 10px
   }
 }
 
 /* FOOTER */
+footer {
+  background: #f7f7f7;
+  padding: 2rem;
+}
+
+.social-media {
+  text-decoration: none;
+  color: #000;
+}
+
+.social-media:hover {
+  color: #000;
+}
+
+svg {
+  margin: auto;
+}
