--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,8 @@ header {
   height: 100%;
 }
 
-.vw100 {
-  display: flex;
-  width: 100vw;
+.contacto {
+  font-size: smaller;
 }
 
 /* MAIN */
@@ -58,7 +57,7 @@ main {
 }
 
 .main-timeline {
-  position: relative
+  position: relative;
 }
 
 .main-timeline:before {
@@ -71,18 +70,18 @@ main {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0
+  right: 0;
 }
 
 .main-timeline .timeline {
   padding-bottom: 40px;
-  position: relative
+  position: relative;
 }
 
 .main-timeline .timeline:after {
   content: "";
   display: block;
-  clear: both
+  clear: both;
 }
 
 .main-timeline .icon {
@@ -94,7 +93,7 @@ main {
   top: 0;
   left: 0;
   bottom: 0;
-  right: 0
+  right: 0;
 }
 
 .main-timeline .icon:before,
@@ -106,33 +105,33 @@ main {
   position: absolute;
   top: 0;
   left: 0;
-  transition: all 0.33s ease-out 0s
+  transition: all 0.33s ease-out 0s;
 }
 
 .main-timeline .icon:before {
   background: #fff;
   border: 2px solid #232323;
-  left: -3px
+  left: -3px;
 }
 
 .main-timeline .icon:after {
   border: 2px solid #c6c6c6;
-  left: 3px
+  left: 3px;
 }
 
 .main-timeline .timeline:hover .icon:before {
-  left: 3px
+  left: 3px;
 }
 
 .main-timeline .timeline:hover .icon:after {
-  left: -3px
+  left: -3px;
 }
 
 .main-timeline .date-content {
   width: 50%;
   float: left;
   margin-top: 22px;
-  position: relative
+  position: relative;
 }
 
 .main-timeline .date-content:before {
@@ -144,7 +143,7 @@ main {
   position: absolute;
   top: 0;
   right: 10px;
-  bottom: 0
+  bottom: 0;
 }
 
 .main-timeline .date-outer {
@@ -153,7 +152,7 @@ main {
   font-size: 16px;
   text-align: center;
   margin: auto;
-  z-index: 1
+  z-index: 1;
 }
 
 .main-timeline .date-outer:before,
@@ -167,13 +166,13 @@ main {
   top: 0;
   left: 0;
   right: 0;
-  transition: all 0.33s ease-out 0s
+  transition: all 0.33s ease-out 0s;
 }
 
 .main-timeline .date-outer:before {
   background: #fff;
   border: 2px solid #232323;
-  left: -6px
+  left: -6px;
 }
 
 #display-none-studio .date-outer:before,
@@ -187,14 +186,12 @@ main {
 }
 
 #epigram .date-outer:before,
-#epigram .icon:before
- {
-  border-color: #D5184C;
+#epigram .icon:before {
+  border-color: #d5184c;
 }
 
 #eb-moixent .date-outer:before,
-#eb-moixent .icon:before
-{
+#eb-moixent .icon:before {
   border-color: #eac102;
 }
 
@@ -204,8 +201,7 @@ main {
 }
 
 #stadler-rail .date-outer:before,
-#stadler-rail .icon:before
- {
+#stadler-rail .icon:before {
   border-color: #0b3f75;
 }
 
@@ -215,8 +211,7 @@ main {
 }
 
 #ajuntament-moixent .date-outer:before,
-#ajuntament-moixent .icon:before
- {
+#ajuntament-moixent .icon:before {
   border-color: #0f47af;
 }
 
@@ -226,31 +221,28 @@ main {
 }
 
 #android-introducion-programacion .date-outer:before,
-#android-introducion-programacion .icon:before
- {
-  border-color: #33691E;
+#android-introducion-programacion .icon:before {
+  border-color: #33691e;
 }
 
 #android-introducion-programacion .date-outer:after,
 #android-introducion-programacion .icon:after {
-  border-color: #A4C739;
+  border-color: #a4c739;
 }
 
 #desarrollo-aplicaciones-web-php-mysql .date-outer:before,
-#desarrollo-aplicaciones-web-php-mysql .icon:before
- {
+#desarrollo-aplicaciones-web-php-mysql .icon:before {
   border-color: #454886;
 }
 
 #desarrollo-aplicaciones-web-php-mysql .date-outer:after,
 #desarrollo-aplicaciones-web-php-mysql .icon:after {
-  border-color: #AAADCF;
+  border-color: #aaadcf;
 }
 
 #ingenieria-informatica-upv .date-outer:before,
-#ingenieria-informatica-upv .icon:before
- {
-  border-color: #CC0000;
+#ingenieria-informatica-upv .icon:before {
+  border-color: #cc0000;
 }
 
 #ingenieria-informatica-upv .date-outer:after,
@@ -260,15 +252,15 @@ main {
 
 .main-timeline .date-outer:after {
   border: 2px solid #c6c6c6;
-  left: 6px
+  left: 6px;
 }
 
 .main-timeline .timeline:hover .date-outer:before {
-  left: 6px
+  left: 6px;
 }
 
 .main-timeline .timeline:hover .date-outer:after {
-  left: -6px
+  left: -6px;
 }
 
 .main-timeline .date {
@@ -276,12 +268,12 @@ main {
   margin: auto;
   position: absolute;
   top: 27%;
-  left: 0
+  left: 0;
 }
 
 .main-timeline .month {
   font-size: 18px;
-  font-weight: 700
+  font-weight: 700;
 }
 
 .main-timeline .year {
@@ -289,13 +281,13 @@ main {
   font-size: 30px;
   font-weight: 700;
   color: #232323;
-  line-height: 36px
+  line-height: 36px;
 }
 
 .main-timeline .timeline-content {
   width: 50%;
   padding: 20px 0 20px 50px;
-  float: right
+  float: right;
 }
 
 .main-timeline .title {
@@ -306,96 +298,113 @@ main {
 }
 
 .main-timeline .description {
-  margin-bottom: 0
+  margin-bottom: 0;
 }
 
 .main-timeline .timeline:nth-child(2n) .date-content {
-  float: right
+  float: right;
 }
 
 .main-timeline .timeline:nth-child(2n) .date-content:before {
-  left: 10px
+  left: 10px;
 }
 
 .main-timeline .timeline:nth-child(2n) .timeline-content {
   padding: 20px 50px 20px 0;
-  text-align: right
+  text-align: right;
 }
 
 @media only screen and (max-width: 991px) {
   .main-timeline .date-content {
-    margin-top: 35px
+    margin-top: 35px;
   }
   .main-timeline .date-content:before {
-    width: 22.5%
+    width: 22.5%;
   }
   .main-timeline .timeline-content {
-    padding: 10px 0 10px 30px
+    padding: 10px 0 10px 30px;
   }
   .main-timeline .title {
-    font-size: 17px
+    font-size: 17px;
   }
   .main-timeline .timeline:nth-child(2n) .timeline-content {
-    padding: 10px 30px 10px 0
+    padding: 10px 30px 10px 0;
   }
 }
 
 @media only screen and (max-width: 767px) {
   .main-timeline:before {
     margin: 0;
-    left: 7px
+    left: 7px;
   }
 
   .main-timeline .timeline {
-    margin-bottom: 20px
+    margin-bottom: 20px;
   }
 
   .main-timeline .timeline:last-child {
-    margin-bottom: 0
+    margin-bottom: 0;
   }
 
   .main-timeline .icon {
-    margin: auto 0
+    margin: auto 0;
   }
 
   .main-timeline .date-content {
     width: 95%;
     float: right;
-    margin-top: 0
+    margin-top: 0;
   }
 
   .main-timeline .date-content:before {
-    display: none
+    display: none;
   }
 
   .main-timeline .date-outer {
     width: 110px;
-    height: 110px
+    height: 110px;
   }
 
   .main-timeline .date-outer:before,
   .main-timeline .date-outer:after {
     width: 110px;
-    height: 110px
+    height: 110px;
   }
 
   .main-timeline .date {
-    top: 30%
+    top: 30%;
   }
 
   .main-timeline .year {
-    font-size: 24px
+    font-size: 24px;
   }
 
   .main-timeline .timeline-content,
   .main-timeline .timeline:nth-child(2n) .timeline-content {
     width: 95%;
     text-align: center;
-    padding: 10px 0
+    padding: 10px 0;
   }
 
   .main-timeline .title {
-    margin-bottom: 10px
+    margin-bottom: 10px;
+  }
+}
+
+.end {
+  height: 2px !important;
+  margin: auto;
+  width: 6rem;
+}
+
+@media screen and (max-width: 767px) {
+  hr.title-underline {
+    margin-bottom: 2rem !important;
+    margin-top: 1rem !important;
+  }
+
+  .end {
+    display: none;
   }
 }
 
